# google-takeout-to-sqlite

./: .gitignore  .tool-versions  CHANGELOG.md  pyproject.toml
google_takeout_to_sqlite/: cli.py  email.py  utils.py
