[tool.poetry]
name = "google-takeout-to-sqlite"
version = "null"
description = "Save data from Google Takeout to a SQLite database"
authors = ["Simon Willison <swillison@gmail.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"
homepage = "https://github.com/dogsheep/google-takeout-to-sqlite"
keywords = [
  "google",
  "sqlite",
  "datasette",
  "dogsheep",
  "datasette-io",
  "datasette-tool",
]

[tool.poetry.dependencies]
python = "^3.7"
sqlite-utils = "^3.36"
beautifulsoup4 = "^4.12.3"
rich = "^13.7.0"
lxml = "^4.9.4"
nameparser = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
google-takeout-to-sqlite = "google_takeout_to_sqlite.cli:cli"
